# my_simulation

./: .gitignore  README.md  instala-infra.sh  q  run_turtle.py
my_gazebo/: CMakeLists.txt  package.xml
my_gazebo/Elementos_base/: untitled.blend  untitled.blend1
my_gazebo/Elementos_base/Arquivos do Creeper Novo/: Creeper.blend  Creeper.stl  NovoCreeperV3 v1.3mf  NovoCreeperV3 v1.f3d  NovoCreeperV3 v1.stl
my_gazebo/Elementos_base/TotenNovo/: Toten V2 v2.stl  toten.blend  toten.blend1  toten.dae
my_gazebo/gazebo_aux/launch/: overwatch.launch.py
my_gazebo/launch/:  spawn_robot_ros2.launch.xml  box_of_colors.launch.py  caixas.launch.py  caixas_coloridas.launch.py  caixas_parede.launch.py  circuito.launch.py  divisoes.launch.py  divisoes_2.launch.py  empty_world.launch.py  encaixotado.launch.py  forca.launch.py  forca_random.launch.py  gripper.launch.py  insperbot.launch.py  insperbot_lab.launch.py  labirinto.launch.py  lobo_vaca.launch.py  mini-labirinto.launch.py  nova_forca.launch.py  nova_forca_random.launch.py  paredes.launch.py  path_of_colors.launch.py  pista-23B-teste.launch.py  pista-23B.launch.py  pista-24.launch.py  pista-24B-fortress.launch.py  pista-24B.launch.py  pista-25B.launch.py  pista_circulos.launch.py  pista_s.launch.py  pista_s2.launch .py  pista_s2.launch.py  pistaoval.launch.py  quadrado.launch.py  responde.launch.py  retangulos.launch.py  reuniao.launch.py  robot_state_publisher.launch.py  roda.launch.py  run_turtle.launch.py  (+13 more)
my_gazebo/models/Boxes/box_blue/: model.config
my_gazebo/models/Boxes/box_red_01/: model.config
my_gazebo/models/Boxes/box_red_02/: model.config
my_gazebo/models/Boxes/caixa/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_amarelo_10/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_amarelo_20/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_azul_10/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_azul_11/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_azul_12/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_azul_20/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_azul_21/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_azul_22/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_cinza_10/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_rosa_11/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_rosa_12/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_rosa_13/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_rosa_23/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_verde_10/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_verde_11/: model.config  model.sdf
my_gazebo/models/Creepers/creeper_verde_13/: model.config  model.sdf
my_gazebo/models/Creepers/tag_100/: model.sdf  (+1 more)
my_gazebo/models/turtlebot3_burger_insper/: gripper.urdf  gripper_controllers.yaml  model copy.sdf  model-1_4.sdf  model.sdf  model.sdf_2024  model_em_dev.sdf  mybot.sdf  turtlebot3_controllers.yaml
my_gazebo/models/urdf/: turtlebot3_burger_insper.urdf_backup
my_gazebo/params/: turtlebot3_burger_insper_bridge.yaml
my_gazebo/urdf/: mybot.urdf  turtlebot3_burger_insper.urdf  turtlebot3_burger_insper.urdf.xacro  turtlebot3_burger_insper.urdf_2024  turtlebot3_burger_insper.urdf_parado  turtlebot3_burger_insper_2025.urdf
my_gazebo/urdf/originais/: common_properties.urdf  turtlebot3_burger_insper.gv  turtlebot3_burger_insper.urdf
my_gazebo/worlds/: box_of_colors.world  caixas_coloridas.world  caixas_parede.world  divisoes.world  divisoes_2.world  labirinto.world  lobo_vaca.world  mini-labirinto.world  paredes.world  path_of_colors.world  pista23-B.world  pista24.world  pista24B.world  pista25B.world  pista_circulos.world  pista_s.world  pista_s2.world  pistaoval.world  quadrado.world  responde.world  retangulos.world  reuniao.world  roda.world  run_turtle_run copy.world  run_turtle_run.world  tres_paredes-new.world  tres_paredes.world  vazio.world
my_simulations/: CMakeLists.txt  package.xml
robcomp_interfaces/: CMakeLists.txt  package.xml
robcomp_interfaces/action/: GoToPoint.action
robcomp_interfaces/msg/: AprilTagInsperArray.msg  Detection.msg  DetectionArray.msg  GameMaster.msg  HandlerAF25a.msg  MudaPista.msg  OrquestratorMSG.msg  PubSubAPS.msg  SimonSaysMSG.msg  Taginfo.msg  TaginfoArray.msg  YoloArray.msg  YoloDetector.msg  YoloDetectorArray.msg
(+1549 files in other folders)
