<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_gazebo</name>
  <version>2.2.6</version>
  <description>
    Gazebo simulation package for the TurtleBot3 - with some modifications to InsperBot
  </description>
  <maintainer email="rogeriobcuenca@insper.edu.br">Rogério B. Cuenca</maintainer>
  <license>Apache 2.0</license>

<!-- mudancas do gazebo classic para o gazebo  harmonic -->
<!-- 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend> -->
  
<!-- novos parametros gazebo harmonic -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
