<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_simulations</name>
  <version>2024.1.1</version>
  <description>
    ROS 2 packages for TurtleBot3 simulations - with some modifications to insperbot
  </description>
  <maintainer email="rogeriobc@insper.edu.br">Rogério B. Cuenca</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>turtlebot3_fake_node</exec_depend>
  <exec_depend>my_gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
